Fix alignment with header icons - BD

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -30,6 +30,13 @@ html {
  background-color: #fff;
 }
 
+.header-icons-container {
+  display: flex;
+  height: 100%;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .zodiac-wheel {
   width: 100%;
   height: 300px;
